--- a/package.json
+++ b/package.json
@@ -1,15 +1,37 @@
 {
+
   "name": "backend-1",
+
   "version": "1.0.0",
+
   "description": "Backend",
+
+  "type": "module",
+
   "main": "index.js",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+    "dev": "nodemon src/index.js"
   },
+
   "keywords": [
+
     "Javascript",
+
     "backend"
+
   ],
+
   "author": "",
-  "license": "ISC"
+
+  "license": "ISC",
+
+  "devDependencies": {
+
+    "nodemon": "^3.1.4"
+
+  }
+
 }
+
