--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 
   "version": "1.0.0",
 
-  "description": "Backend",
+  "description": "Backend for the project",
 
   "type": "module",
 
@@ -13,6 +13,7 @@
   "scripts": {
 
     "dev": "nodemon src/index.js"
+
   },
 
   "keywords": [
@@ -29,7 +30,9 @@
 
   "devDependencies": {
 
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+
+    "prettier": "^3.3.3"
 
   }
 
