--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 
   "scripts": {
 
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config  --experimental-json-modules src/index.js"
 
   },
 
@@ -33,6 +33,16 @@
     "nodemon": "^3.1.4",
 
     "prettier": "^3.3.3"
+
+  },
+
+  "dependencies": {
+
+    "dotenv": "^16.4.5",
+
+    "express": "^4.19.2",
+
+    "mongoose": "^8.6.0"
 
   }
 
