--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
 
   "dependencies": {
 
+    "cookie-parser": "^1.4.6",
+
+    "cors": "^2.8.5",
+
     "dotenv": "^16.4.5",
 
     "express": "^4.19.2",
