--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 
   "dependencies": {
 
+    "bcrypt": "^5.1.1",
+
     "cookie-parser": "^1.4.6",
 
     "cors": "^2.8.5",
@@ -46,7 +48,11 @@
 
     "express": "^4.19.2",
 
-    "mongoose": "^8.6.0"
+    "jsonwebtoken": "^9.0.2",
+
+    "mongoose": "^8.6.0",
+
+    "mongoose-aggregate-paginate-v2": "^1.1.2"
 
   }
 
