--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 
     "bcrypt": "^5.1.1",
 
+    "cloudinary": "^2.4.0",
+
     "cookie-parser": "^1.4.6",
 
     "cors": "^2.8.5",
@@ -52,7 +54,9 @@
 
     "mongoose": "^8.6.0",
 
-    "mongoose-aggregate-paginate-v2": "^1.1.2"
+    "mongoose-aggregate-paginate-v2": "^1.1.2",
+
+    "multer": "^1.4.5-lts.1"
 
   }
 
